syntax "proto3";
package foo.bar.baz;
option java_package = "com.rsproto.toplevelconcepts";